<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Android Mark I</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_verify">verify</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_number">Phone Number must be >10 numbers and start with +</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="settings_fact_type_title">type</string>
    <string name="invalid_details">Invalid Username or Password</string>
    <string name="account_failed">Authentication Failed.</string>
    <string name="fact_type_android">Android</string>
    <string name="fact_type_california">California</string>
    <string name="phone_number">Phone Number with Country Code</string>
    <string name="create">Create</string>
    <string name="sign_up">Sign Up</string>
    <string name="signUp_failed">"SignUp failed"</string>
    <string name="verify_email_failed">"Verify Email Link failed"</string>
    <string name="invalid_phone_number">Invalid Phone Number</string>
    <string name="invalid_verify_info">Invalid Phone Number or Code</string>
    <string name="number_link_failed">Phone number Link Failed</string>
    <string name="invalid_code">Code must be 6 Numbers</string>
    <string name="reset">Reset</string>
    <string name="verification">Verification</string>
    <string name="signUp">SignUp</string>
    <string name="network_error">Check Network Connectivity…</string>
    <string name="details_error">Invalid Account Details</string>
    <string name="details_error_phone">Invalid Number or code Code Detail</string>
    <string name="login">Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="login_unsuccessful_msg">Login unsuccessful</string>
    <string name="code">Enter Code Here</string>
    <string name="logout">LogOut</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="or_connect_using">Or connect using</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in_to_your_existing_account_of_mark_i">Log in to your existing account of Mark I</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="create_an_account_for_mark_i">Create an account for Mark I to access all features</string>
    <string name="let_s_get_started">Let\'s Get Started!</string>
    <string name="verify_phone_number_to_continue">Verify phone number to continue</string>
    <string name="enter_phone_number_and_continue_with_code_received">Enter phone number and continue with code received</string>
    <string name="verify_phone_number">Verify Phone Number</string>
    <string name="enter_email_to_reset_password">Enter email and continue to reset password</string>
    <string name="reset_password">Reset Password</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="google">Google</string>
    <string name="next">Continue</string>
    <string name="send_code">Send Code</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_successful">Login Successful</string>
    <string name="sign_up_success">Sign Up Successful</string>
    <string name="phone_success">Phone number Verification Success</string>
    <string name="password_reset_email_error">Password Reset Email Sent</string>
    <string name="resend_code">Resend Code</string>
    <string name="roll">Roll</string>
    <string name="dice_roller">Dice Roller</string>
    <string name="android_trivia">Android Trivia</string>
    <string name="play">Play</string>
    <string name="game_over">Game Over</string>
    <string name="try_again">Try Again?</string>
    <string name="position">Position</string>
    <string name="select_an_avatar">Select an Avatar</string>
    <string name="about_text">Android Trivia will help remind you of important concepts you have learned and will learn in Android development.\n\nConsider modifying the questions and graphics to make this game your own!</string>
    <string name="rules_text">Select the answer from the options given. Each time you get an answer correct, you advance to the next question.\n\nIf you get the answer wrong, your game ends! You can return to the title screen using up or back from within the game screen, and this will also end your game.</string>
    <string name="rules">Rules</string>
    <string name="about">About</string>
    <string name="trivia_hint">Trivia Hint</string>
    <string name="title_android_trivia_question">Android Trivia (%1$d/%2$d)</string>
    <string name="title_about_trivia">About Trivia</string>
    <string name="title_trivia_rules">Trivia Rules</string>
    <string name="share_success_text">I mastered #UdacityAndroidTrivia with %1$d/%2$d correct questions!</string>
    <string name="submit_button">Submit</string>
    <string name="congratulations">Congratulations!</string>
    <string name="share">Share</string>
    <string name="sharing_not_available">Sharing Not Available</string>
    <string name="invalid_choice">Pick an answer to continue</string>
    <string name="next_match">Next Match</string>
    <string name="dollar_sign">$</string>
    <string name="zero">0</string>
    <string name="dessert_sold">Desserts Sold</string>
    <string name="share_text">I\'ve clicked %1$d Desserts for a total of %2$d$ #AndroidDessertClicker</string>
    <string name="dessert_pusher">Dessert Pusher</string>
    <string name="guess_it">Guess It</string>
    <string name="guess_it_name">Guess the Word</string>
    <string name="skip">Skip</string>
    <string name="play_again">Play Again</string>
    <string name="you_scored">You Scored</string>
    <string name="title_text">guess the word!</string>
    <string name="play_button">Play</string>
    <string name="get_ready">Get ready to</string>
    <string name="got_it">Got it</string>
    <string name="word_is">The word is…</string>
    <string name="quote_format">\"%s\"</string>
    <string name="score_format">Current Score: %d</string>
    <string name="sleep_tracker_name">Track My Sleep Quality</string>
    <string name="sleep_tracker_fragment">Sleep Tracker</string>
    <string name="sleep_quality_fragment">Sleep Quality</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="clear">Clear</string>
    <string name="quality_0">Sleep Quality 0</string>
    <string name="quality_1">Sleep Quality 1</string>
    <string name="quality_2">Sleep Quality 2</string>
    <string name="quality_3">Sleep Quality 3</string>
    <string name="quality_4">Sleep Quality 4</string>
    <string name="quality_5">Sleep Quality 5</string>
    <string name="how_was_hour_sleep">How was your sleep?</string>
    <string name="zero_very_bad">Very bad</string>
    <string name="one_poor">Poor</string>
    <string name="two_soso">So-so</string>
    <string name="three_ok">OK</string>
    <string name="four_pretty_good">Pretty good</string>
    <string name="five_excellent">Excellent!</string>
    <string name="cleared_message">All your data is gone forever.</string>
    <string name="header_text">Sleep Results</string>
    <string name="close">Close</string>
    <string name="minutes_length">%d minutes on %s</string>
    <string name="hours_length">%d hours on %s</string>
    <string name="seconds_length">%d seconds on %s</string>
    <string name="sleep_tracker">Sleep Tracker</string>
    <string name="sleep_quality">Sleep Quality</string>
    <string name="mars_real_estate_name">Real Estate on Mars</string>
    <string name="show_all">Show all</string>
    <string name="show_rent">Rent</string>
    <string name="show_buy">Buy</string>
    <string name="type_rent">Rent</string>
    <string name="type_sale">Sale</string>
    <string name="display_type">For %s</string>
    <string name="display_price_monthly_rental">$%,.0f/month</string>
    <string name="display_price">$%,.0f</string>
    <string name="mars_real_estate">Mars Real Estate</string>
    <string name="devByte_viewer_name">DevByte Viewer</string>
    <string name="waiting_for_location_and_network">Waiting for location and network result.\n\n If running on an
        emulator open the Maps app to enable location services.
    </string>
    <string name="gdg_finder">GDG Finder</string>
    <string name="egg_timer_name">Egg Timer</string>
    <string name="egg_prompt">How do you like your egg?</string>
    <string name="timer_on">Start</string>
    <string name="timer_off">Stop</string>
    <string name="notification_title">Egg Timer</string>
    <string name="notification_text">Your egg is ready!!</string>
    <string name="fcm_message">FCM Message</string>
    <string name="message_subscribe_failed">Failed to subscribe to topic</string>
    <string name="message_subscribed">Subscribed to topic</string>
    <string name="egg_notification_channel_id" translatable="false">egg_channel</string>
    <string name="egg_notification_channel_name" translatable="true">Egg</string>
    <string name="breakfast_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="breakfast_notification_channel_name" translatable="true">Breakfast</string>
    <string name="eggs_ready">It is time! Bon appetit!</string>
    <string name="timer_running">Egg timer is running…</string>
    <string name="firebase">Firebase</string>
    <string name="property_animation_app_name">Property Animation</string>
    <string name="mini_Paint_app_name">Mini Paint</string>
    <string name="clipping_example_app_name">Clipping Example</string>
    <string name="custom_fan_controller_app_name">Custom Fan Controller</string>
    <string name="heart_fill_app_name">Heart Fill</string>
    <string name="tick_cross_app_name">Tick Cross</string>
    <string name="wander_app_name">Wander</string>
    <string name="treasure_hunt_app_name">Treasure Hunt</string>
    <string name="motion_layout_app_name">Motion Layout</string>
    <string name="title_activity_step1">Animations with Motion Layout</string>
    <string name="title_activity_step7_completed">Complex motion with KeyFrames</string>
    <string name="title_activity_step8">Running motion with code</string>
    <string name="coordinated_motion_app_name">Coordinated Motion</string>
</resources>