<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.android.androidmarki.ui.home.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_nav_home_second"
            app:destination="@id/nav_home_second" />
        <action
            android:id="@+id/action_nav_home_to_action_settings"
            app:destination="@id/action_settings" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.android.androidmarki.ui.home.second.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.android.androidmarki.ui.home.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_trivia"
        android:name="com.example.android.androidmarki.ui.home.trivia.title.TriviaTitleFragment"
        android:label="@string/android_trivia"
        tools:layout="@layout/fragment_trivia_title" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.android.androidmarki.ui.home.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.android.androidmarki.ui.home.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/action_settings"
        tools:layout="@xml/settings"
        android:name="com.example.android.androidmarki.ui.home.settings.SettingsFragment"
        android:label="Settings" />
    <activity
        android:id="@+id/mainActivity"
        tools:layout="@layout/activity_main"
        android:name="com.example.android.androidmarki.ui.main.MainActivity"
        android:label="MainActivity" />
    <fragment
        android:id="@+id/nav_dice_roller"
        android:name="com.example.android.androidmarki.ui.home.dice.DiceFragment"
        android:label="DiceFragment"
        tools:layout="@layout/fragment_dice"
        />

</navigation>
