<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.android.androidmarki.ui.main.login.LoginViewModel" />

        <variable
            name="clickListener"
            type="com.example.android.androidmarki.ui.main.MainListener.Login" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#68EFEFEF"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context=".ui.main.login.LoginFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/login_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="@{viewModel.loginResult.loading == false ? View.VISIBLE : View.INVISIBLE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/and"
                    android:layout_width="0dp"
                    android:layout_height="192dp"
                    android:layout_margin="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/splash" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:text="@string/welcome_back"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/and" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                    android:layout_marginTop="8dp"
                    android:hint="@string/log_in_to_your_existing_account_of_mark_i"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/welcome" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_username_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="24dp"
                    android:hint="@string/prompt_email"
                    app:error="@{viewModel.loginUIData.usernameError}"
                    app:errorEnabled="true"
                    app:layout_constraintBottom_toTopOf="@id/login_password_layout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/info"
                    app:startIconDrawable="@drawable/ic_email_black_24dp"
                    app:startIconTint="@color/colorPrimaryDark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:selectAllOnFocus="true"
                        android:text="@={viewModel.loginUIData.username}"
                        android:textColorHint="@color/colorPrimaryDark" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_password_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:hint="@string/prompt_password"
                    app:error="@{viewModel.loginUIData.passwordError}"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/login_username_layout"
                    app:passwordToggleContentDescription="password layout"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorPrimaryDark"
                    app:startIconDrawable="@drawable/ic_lock_lockdown"
                    app:startIconTint="@color/colorPrimaryDark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:inputType="textPassword"
                        android:selectAllOnFocus="true"
                        android:text="@={viewModel.loginUIData.password}"
                        android:textColorHint="@color/colorPrimaryDark"
                        app:done="@{()->viewModel.login()}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/forgot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->clickListener.onReset()}"
                    android:text="@string/forgot_password"
                    android:textColor="@color/google_green"
                    app:layout_constraintEnd_toEndOf="@id/login_password_layout"
                    app:layout_constraintTop_toBottomOf="@id/login_password_layout" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="36dp"
                    android:layout_marginEnd="24dp"
                    android:onClick="@{()->viewModel.login()}"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    app:backgroundTint="@color/google_green"
                    app:cornerRadius="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/forgot" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/connect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/or_connect_using"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/login" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_google"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="48dp"
                    android:onClick="@{()->clickListener.onSignInWithGoogle()}"
                    android:text="@string/google"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:textColor="@color/google_green"
                    app:strokeColor="@color/google_green"
                    app:backgroundTint="@color/colorWhite"
                    app:cornerRadius="8dp"
                    app:icon="@drawable/googleg_standard_color_18"
                    app:iconTint="@null"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/connect" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/sign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="48dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/don_t_have_an_account"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/login_google" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:onClick="@{()->clickListener.onSignUp()}"
                    android:text="@string/sign_up"
                    android:textColor="@color/google_green"
                    app:layout_constraintBottom_toBottomOf="@id/sign"
                    app:layout_constraintStart_toEndOf="@id/sign"
                    app:layout_constraintTop_toTopOf="@id/sign" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ProgressBar
                android:id="@+id/login_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{viewModel.loginResult.loading == false ? View.GONE : View.VISIBLE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>